# fastdeps

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MCP_PROPOSAL.md  Makefile  PLAN.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
fastdeps/: __init__.py  analyzer.py  cli.py  graph.py  mcp_server.py  output.py  parallel.py  parser.py  resolver.py  server.py
tests/: test_graph.py  test_parser.py  test_resolver.py
